Fix the text overflow of named icons Fix: #4 Signed-off-by: <tonny.tzeng@gmail.com>

--- a/css/default.css
+++ b/css/default.css
@@ -8,6 +8,7 @@ div.namedIcon {
 	display: inline-block;
 	text-align: center;
 	vertical-align: top;
+	margin: 2px;
 }
 div.namedIcon>a {
 	display: inline-block;
